media/css/do.css
/* ... */
aside.note.do blockquote dl.author-name img[width="48"][height="48"][rel$="image"] {
vertical-align:top;
}
#document-interactions section,
#document-interactions article.do dl,
#document-interactions article.do dl *,
aside.note.do blockquote dl,
aside.note.do blockquote dl * {
margin:0;
margin-block-before:0;
margin-block-after:0;
margin-block-start:0;
margin-block-end:0;
-webkit-margin-before:0;
-webkit-margin-after:0;
-webkit-margin-start:0;
-webkit-margin-end:0;
margin-inline-start:0;
margin-inline-end:0;
}

aside.note.do blockquote dl.published,
aside.note.do blockquote dl.license,
aside.note.do blockquote dl.rights {
position:relative;
top:-1.5em;
left:3.75em;
}
aside.note.do blockquote dl.published a,
aside.note.do blockquote dl.license a,
aside.note.do blockquote dl.rights a {
color:#333;
text-decoration:none;
}
aside.note.do blockquote dl.published a:hover,
aside.note.do blockquote dl.license a:hover,
aside.note.do blockquote dl.rights a:hover {
color:#000;
text-decoration:underline;
}
aside.note.do blockquote article > div,
aside.note.do blockquote article > section {
position:relative;
top:-1.5em;
}


#document-editor {
position:static;
}

#toc {
top:0;
left:0;
z-index:8;
border:0;
border-radius:0;
border-bottom: 1px solid #ccc;
border-bottom-right-radius: 0.5em;
border-right: 1px solid #ccc;
box-shadow: 0.25em 0.25em 0.25em rgba(0, 0, 0, 0.1);
}
#toc ul {
margin-top:1em;
}

.success { background-color:#FFFFFF; color:#647819; font-weight:bold; }
.warning { background-color:#FFFF00; color:#000000; font-weight:bold; }
.error { background-color:#FF0000; color:#FFFFFF; font-weight:bold; }
.highlight { background-color:#00FFFF; color:#000000; }

#document-menu {
margin:0;
width:20em;
}
#document-menu {
color:#000;
}
#document-menu footer {
color:inherit;
}

/*de-timblulating*/
#document-menu table {
background-color:#fff;
width:100%;
border-collapse:collapse;
}

#document-menu > button {
position:absolute;
top:0.615em;
right:0.615em;
font-size:1.75em;
display:inherit;
}

#document-menu > header {
display:none;
}
#document-menu > footer {
display:none;
margin-top:1em;
}
#document-menu.on > header,
#document-menu.on > footer {
display:block;
}

#document-menu > header,
#document-menu > div,
#document-menu > footer,
#document-menu #document-views,
#document-menu #document-metadata {
clear:both;
float:left;
width:100%;
background-color:#fff;
background-image:none;
}

#document-menu header button,
#document-menu div button,
#document-menu footer button,
aside button.delete {
display:block;
border:0;
background-color:#fff;
padding:0;
margin:0;
font-size:1em;
font-family:sans-serif;
font-weight:normal;
}

.do.on section {
width:100%;
max-width:none;
margin:0;
padding:0;
}

#document-menu section button:hover {
background-color:#eee;
cursor:pointer;
}
#document-menu section button[disabled]:hover {
background-color:inherit;
cursor:default;
}

#document-menu ul,
#document-menu h2,
#toc h2 {
margin:0;
padding:0;
}
#document-menu section h2 {
display:none;
}
#document-menu section button {
width:33.33%;
height:5em;
float:left;
}
#document-menu button .fa {
display:block;
margin-bottom:0.25em;
}

#user-info {
margin:0;
}
.signin-user {
width:33%;
height:5em;
}
#user-info > span {
margin-left:1.75em;
float:left;
}
#user-info img {
display:block;
}

#document-menu p {
text-indent:0;
}
#document-menu.do caption:before {
content:'' !important;
}




#document-do ul,
#document-views ul,
#document-metadata ul,
#embed-data-in-html ul,
#share-resource ul,
#table-of-stuff ul {
list-style-type:none;
margin-left:0;
}
#document-metadata * {
text-align:left;
margin:0;
}
#document-metadata table,
#document-metadata table * {
border:0;
padding-left:0;
}
#document-metadata caption {
font-size:1.231em;
font-weight:bold;
width:100%;
display:none;
}

#table-of-stuff {
z-index:8;
}

#table-of-stuff li/*,
#document-views li,
#embed-data-in-html li,
#document-do li */{
display:inline;
margin-right:1em;
}

#document-menu #document-views {
margin:2em 0;
}

#document-menu li {
margin:0;
padding:0;
list-style-type:none;
}
#document-menu dt {
font-weight:bold;
display:inline;
}
#document-menu dt:after {
content:":";
}
#document-menu dd {
display:inline;
margin-left:0;
}
#document-menu dd:after {
content:", ";
}
#document-menu dd:last-child:after {
content:"";
}


#document-menu #document-views button {
width:auto;
height:auto;
padding:0.5em;
border:1px solid #eee;
vertical-align:middle;
}

#document-menu #document-views > i.fa {
float:left;
margin:0.35em 1em 0 0.8em;
font-size:1.4em;
}

#document-menu .editor-disable,
#document-menu .review-disable,
#document-menu .local-storage-disable-html {
background-color:#eee;
}
#document-menu .local-storage-disable-html {
margin-right:0.25em;
}
#local-storage-html-autosave {
margin-top:1em;
}


.tabs nav {
position:relative;
z-index:9;
}
.tabs nav ul {
list-style-type:none;
margin:0 !important;
}
.tabs nav ul li {
font-weight:bold;
display:inline-block;
border:2px solid #ffffff;
border-bottom:#cccccc;
}
.tabs nav ul li.selected {
border:2px solid #cccccc;
border-bottom-color:#ffffff;
}
.tabs nav ul li a {
background-color:#eeeeee;
color:#000000;
text-decoration:none;
display:block;
padding:0.75em 1em;
outline:none;
}
.tabs nav ul li.selected a {
text-decoration:none;
color:#000000;
background-color:#ffffff;
}
.tabs > div,
.tabs > figure {
display:none;
clear:both;
margin-top:-2px;
}
.tabs > div.selected,
.tabs > figure.selected {
display:block;
}

.tabs figure.selected:not([class~=listing]),
.tabs .selected textarea {
padding:0.75em 1em;
display:block;
border:2px solid #cccccc;
}

#table-of-stuff label {
font-weight:normal;
}

#browser-contents {
overflow-x:hidden;
overflow-y:auto;
min-width:25%;
max-height:16em;
margin:1em 0;
}
#browser-contents ul {
margin:0;
}
#browser-contents ul input[type="radio"] {
display:none;
}
#browser-contents ul label {
display:block;
padding:0.4em;
cursor:pointer;
}
#browser-contents li {
list-style-type:none;
}
/* ... */

